--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "primer proyecto de node",
   "main": "index.html",
   "scripts": {
+    "dev": "lite-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/devStudent/Paginas-web-con-Bootstrap-4/issues"
   },
-  "homepage": "https://github.com/devStudent/Paginas-web-con-Bootstrap-4#readme"
+  "homepage": "https://github.com/devStudent/Paginas-web-con-Bootstrap-4#readme",
+  "devDependencies": {
+    "lite-server": "^2.6.1"
+  }
 }
