--- a/package.json
+++ b/package.json
@@ -1,29 +1,71 @@
 {
-  "name": "paginas-web-con-bootstrap-4",
+  "name": "guia-hoteles",
   "version": "1.0.0",
-  "description": "primer proyecto de node",
+  "description": "Nuestro primer proyecto de Nodejs",
   "main": "index.html",
   "scripts": {
     "dev": "lite-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "concurrently \"npm run watch:scss\" \"npm run dev \" ",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "scss": "node-sass -o css/ css/",
+    "watch:scss": "onchange 'css/*.scss' -- npm run scss ",
+    "clean": "rimraf dist",
+    "imagemin": "imagemin images/* --out-dir dist/images",
+    "usemin": "usemin index.html -d dist --htmlmin -o dist/index.html && usemin about.html -d dist --htmlmin -o dist/about.html && usemin precios.html -d dist --htmlmin -o dist/precios.html && usemin contacto.html -d dist --htmlmin -o dist/contacto.html",
+    "build": "npm run clean && npm run scss && npm run imagemin && npm run usemin"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/devStudent/Paginas-web-con-Bootstrap-4.git"
+    "url": "git+https://jvelandia@bitbucket.org/jvelandia/guia-hoteles.git"
   },
-  "author": "",
+  "author": "Jimmy Velandia",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/devStudent/Paginas-web-con-Bootstrap-4/issues"
-  },
-  "homepage": "https://github.com/devStudent/Paginas-web-con-Bootstrap-4#readme",
+  "homepage": "https://bitbucket.org/jvelandia/guia-hoteles#readme",
   "devDependencies": {
-    "lite-server": "^2.6.1"
+    "browser-sync": "^2.26.12",
+    "clean-css-cli": "^4.3.0",
+    "copyfiles": "^2.3.0",
+    "cssmin": "^0.4.3",
+    "del": "^5.1.0",
+    "grunt": "^1.3.0",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-sass": "^2.0.0",
+    "grunt-contrib-uglify": "^5.0.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-filerev": "^2.3.1",
+    "grunt-usemin": "^3.1.1",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-flatmap": "^1.0.2",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-rev": "^9.0.0",
+    "gulp-sass": "^4.1.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-usemin": "^0.3.30",
+    "htmlmin": "0.0.7",
+    "imagemin": "^7.0.1",
+    "imagemin-cli": "^6.0.0",
+    "jit-grunt": "^0.10.0",
+    "lite-server": "^2.5.4",
+    "node-sass": "^4.14.1",
+    "onchange": "^7.0.2",
+    "rimraf": "^3.0.2",
+    "time-grunt": "^2.0.0",
+    "uglifyjs": "^2.4.11",
+    "usemin-cli": "^0.6.0"
   },
   "dependencies": {
-    "bootstrap": "^5.2.3",
-    "bufferutil": "^4.0.7",
-    "popper.js": "^1.16.1",
-    "utf-8-validate": "^6.0.2"
+    "bootstrap": "^4.5.0",
+    "concurrently": "^5.3.0",
+    "grunt-contrib-imagemin": "^4.0.0",
+    "jquery": "^3.5.1",
+    "mozjpeg": "^7.0.0",
+    "open-iconic": "^1.1.1",
+    "popper.js": "^1.16.1"
   }
 }
